# akane

./: .gitignore  LICENSE  README.md  pyproject.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/bot/: Dockerfile  pyproject.toml
apps/bot/app/: __init__.py  main.py
apps/scheduler/: Dockerfile  pyproject.toml
apps/scheduler/app/: __init__.py  main.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/app/: __init__.py  main.py
infra/docker/: .env.example  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.stg.yml  docker-compose.vps.codex.yml  docker-compose.vps.yml  docker-compose.yml
infra/docker/codex-app-server/: Dockerfile
libs/core/: pyproject.toml
libs/core/src/akane_core/: __init__.py  session_manager.py
libs/providers/: pyproject.toml
libs/providers/src/akane_providers/: __init__.py  base.py  codex_app_server.py  glm.py  kimi.py
