[project]
name = "akane-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "discord.py>=2.5.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.7.0",
  "redis>=5.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
