[project]
name = "akane-scheduler"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "arq>=0.26.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.7.0",
  "redis[hiredis]>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

