[project]
name = "akane-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "arq>=0.26.0",
  "pydantic-settings>=2.7.0",
  "redis>=5.2.0",
  "akane-core",
  "akane-providers",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
