[project]
name = "akane-providers"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "websockets>=16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/akane_providers"]
